--- a/inicio.html
+++ b/inicio.html
@@ -44,10 +44,10 @@
             </div>
         </aside>
 
-        <div class="contenido-principal">
-            <main class="contenido-principal-main">
+        <div class="principal">
+            <main class="contenidotodo">
                 <h2>HOLA, YO SOY VANESSA</h2>
-                <div class="contenido-con-imagen">
+                <div class="imagen">
                     <img src="img/avatar.png" alt="Vanessa Garcia" class="imagen-vanessa">
                 <div class="texto3">
                     <hr class="linea">
