--- a/proyectos.html
+++ b/proyectos.html
@@ -44,6 +44,26 @@
             </div>
         </aside>
 
+        <div class="contenido">
+            <main class="contenidotodo">
+                <h2>HOLA, YO SOY VANESSA</h2>
+                <div class="imagen">
+                    <img src="img/avatar.png" alt="Vanessa Garcia" class="imagen-vanessa">
+                <div class="texto3">
+                    <hr class="linea">
+                    <p><br>
+                        Hola, mi nombre es Aylen Vanessa García. <br>Nací en Colombia 
+                        y curso en el programa de Análisis y Desarrollo de Software (ADSO). <br>
+                        Mi pasión por la tecnología y el desarrollo me ha llevado a elegir este camino, 
+                        buscando profundizar mis conocimientos y habilidades en el campo del software. <br>
+                        Estoy comprometida con mi crecimiento personal y profesiona
+                    </p>
+                    <hr class="linea">
+                </div>
+
+                </div>
+            </main>
+        </div>
         
         
 
