proyecto casi terminado

--- a/bienvenido.html
+++ b/bienvenido.html
@@ -17,8 +17,8 @@
                 <h1>BIENVENIDOS</h1>
             </div>
             <div class="boton">
-                <button>Entrar</button>
-            </div>
+                <a href="pantallacarga.html" class="boton-entrar">Entrar</a>
+            </div>            
         </div>
     </div>
 </body>
