--- a/contacto.html
+++ b/contacto.html
@@ -18,38 +18,49 @@
                 <h1> <center>contacto</center></h1>
             </div>
         </header>
-        
         <aside>
             <div class="texto">
                 <div class="interruptor">
                     <input type="checkbox" id="inicio" class="rodadero">
                     <label for="inicio" class="rodadero2"></label>
-                    <a href="#inicio" class="inicio">Inicio</a>
+                    <a href="inicio.html" class="inicio">Inicio</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="proyectos" class="rodadero">
                     <label for="proyectos" class="rodadero2"></label>
-                    <a href="#proyectos" class="inicio">Proyectos</a>
+                    <a href="proyectos.html" class="inicio">Proyectos</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="perfil" class="rodadero">
                     <label for="perfil" class="rodadero2"></label>
-                    <a href="#perfil" class="inicio">Perfil</a>
+                    <a href="perfil.html" class="inicio">Perfil</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="contacto" class="rodadero">
                     <label for="contacto" class="rodadero2"></label>
-                    <a href="#contacto" class="inicio">Contacto</a>
+                    <a href="contacto.html" class="inicio">Contacto</a>
                 </div>
-                
             </div>
         </aside>
-        <div class="principal">
-            <div class="contenidotodo">
-                <div class="red1"><img src="img/logofacebook.png" alt=""> <div class="texto"><h3>Vanessa Garcia</h3></div></div>
-                <div class="red2"><img src="img/logoinstagram.png" alt=""><div class="texto"><h3>@vanessa_garcia8</h3></div></div>
-                <div class="red3"><img src="img/logogithub.png" alt=""><div class="texto"><h3>vanessaGarcia080812</h3></div></div>
+        <div class="contenidotodo">
+            <div class="red1">
+                <a href="https://www.facebook.com/ailen.garcia.3388630/">
+                    <img src="img/logofacebook.png" alt="">
+                    <div class="texto"><h3>Vanessa Garcia</h3></div>
+                </a>
             </div>
-        </div>
+            <div class="red2">
+                <a href="https://www.instagram.com/vanessa_garcia8/">
+                    <img src="img/logoinstagram.png" alt="">
+                    <div class="texto"><h3>@vanessa_garcia8</h3></div>
+                </a>
+            </div>
+            <div class="red3">
+                <a href="https://github.com/vanessaGarcia080812">
+                    <img src="img/logogithub.png" alt="">
+                    <div class="texto"><h3>vanessaGarcia080812</h3></div>
+                </a>
+            </div>
+        </div> 
 </body>
 </html>
