--- a/proyectos.html
+++ b/proyectos.html
@@ -22,24 +22,24 @@
         <aside>
             <div class="texto">
                 <div class="interruptor">
-                    <input type="checkbox" id="switch-inicio" class="rodadero">
-                    <label for="switch-inicio" class="rodadero2"></label>
-                    <a href="#inicio" class="inicio">Inicio</a>
+                    <input type="checkbox" id="inicio" class="rodadero">
+                    <label for="inicio" class="rodadero2"></label>
+                    <a href="inicio.html" class="inicio">Inicio</a>
                 </div>
                 <div class="interruptor">
-                    <input type="checkbox" id="switch-proyectos" class="rodadero">
-                    <label for="switch-proyectos" class="rodadero2"></label>
-                    <a href="#proyectos" class="inicio">Proyectos</a>
+                    <input type="checkbox" id="proyectos" class="rodadero">
+                    <label for="proyectos" class="rodadero2"></label>
+                    <a href="proyectos.html" class="inicio">Proyectos</a>
                 </div>
                 <div class="interruptor">
-                    <input type="checkbox" id="switch-perfil" class="rodadero">
-                    <label for="switch-perfil" class="rodadero2"></label>
-                    <a href="#perfil" class="inicio">Perfil</a>
+                    <input type="checkbox" id="perfil" class="rodadero">
+                    <label for="perfil" class="rodadero2"></label>
+                    <a href="perfil.html" class="inicio">Perfil</a>
                 </div>
                 <div class="interruptor">
-                    <input type="checkbox" id="switch-contacto" class="rodadero">
-                    <label for="switch-contacto" class="rodadero2"></label>
-                    <a href="#contacto" class="inicio">Contacto</a>
+                    <input type="checkbox" id="contacto" class="rodadero">
+                    <label for="contacto" class="rodadero2"></label>
+                    <a href="contacto.html" class="inicio">Contacto</a>
                 </div>
             </div>
         </aside>
