--- a/carpetanoimportante/prueba.html
+++ b/carpetanoimportante/prueba.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="prueba.css">
+    <link rel="stylesheet" href="css/contacto.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">
@@ -23,34 +23,44 @@
                 <div class="interruptor">
                     <input type="checkbox" id="inicio" class="rodadero">
                     <label for="inicio" class="rodadero2"></label>
-                    <!-- Modifica el href para redireccionar a la página de inicio -->
-                    <a href="tu_url_de_inicio_aquí" class="inicio">Inicio</a>
+                    <a href="inicio.html" class="inicio">Inicio</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="proyectos" class="rodadero">
                     <label for="proyectos" class="rodadero2"></label>
-                    <!-- Modifica el href para redireccionar a la página de proyectos -->
-                    <a href="tu_url_de_proyectos_aquí" class="inicio">Proyectos</a>
+                    <a href="proyectos.html" class="inicio">Proyectos</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="perfil" class="rodadero">
                     <label for="perfil" class="rodadero2"></label>
-                    <!-- Modifica el href para redireccionar a la página de perfil -->
-                    <a href="tu_url_de_perfil_aquí" class="inicio">Perfil</a>
+                    <a href="perfil.html" class="inicio">Perfil</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="contacto" class="rodadero">
                     <label for="contacto" class="rodadero2"></label>
-                    <!-- Modifica el href para redireccionar a la página de contacto -->
-                    <a href="tu_url_de_contacto_aquí" class="inicio">Contacto</a>
+                    <a href="contacto.html" class="inicio">Contacto</a>
                 </div>
             </div>
         </aside>
-        
         <div class="contenidotodo">
-            <div class="red1"><a href="https://www.facebook.com/ailen.garcia.3388630/"><img src="img/logofacebook.png" alt=""><a href="https://www.facebook.com/ailen.garcia.3388630/"><h1>vanessaGarcia080812</h1></a></div>
-            <div class="red2"><a href="tu_url_de_instagram_aquí"><img src="img/logoinstagram.png" alt=""><a href="https://www.facebook.com/ailen.garcia.3388630/"><h1>vanessaGarcia080812</h1></a></div></div>
-            <div class="red3"><a href="https://www.facebook.com/ailen.garcia.3388630/"><img src="img/logogithub.png" alt=""><a href="https://www.facebook.com/ailen.garcia.3388630/"><h1>vanessaGarcia080812</h1></a></div></div>
-        </div>
+            <div class="red1">
+                <a href="https://www.facebook.com/ailen.garcia.3388630/">
+                    <img src="img/logofacebook.png" alt="">
+                    <div class="texto"><h3>Vanessa Garcia</h3></div>
+                </a>
+            </div>
+            <div class="red2">
+                <a href="https://www.instagram.com/vanessa_garcia8/">
+                    <img src="img/logoinstagram.png" alt="">
+                    <div class="texto"><h3>@vanessa_garcia8</h3></div>
+                </a>
+            </div>
+            <div class="red3">
+                <a href="https://github.com/vanessaGarcia080812">
+                    <img src="img/logogithub.png" alt="">
+                    <div class="texto"><h3>vanessaGarcia080812</h3></div>
+                </a>
+            </div>
+        </div> 
 </body>
 </html>
