--- a/perfil.html
+++ b/perfil.html
@@ -24,24 +24,23 @@
                 <div class="interruptor">
                     <input type="checkbox" id="inicio" class="rodadero">
                     <label for="inicio" class="rodadero2"></label>
-                    <a href="#inicio" class="inicio">Inicio</a>
+                    <a href="inicio.html" class="inicio">Inicio</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="proyectos" class="rodadero">
                     <label for="proyectos" class="rodadero2"></label>
-                    <a href="#proyectos" class="inicio">Proyectos</a>
+                    <a href="proyectos.html" class="inicio">Proyectos</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="perfil" class="rodadero">
                     <label for="perfil" class="rodadero2"></label>
-                    <a href="#perfil" class="inicio">Perfil</a>
+                    <a href="perfil.html" class="inicio">Perfil</a>
                 </div>
                 <div class="interruptor">
                     <input type="checkbox" id="contacto" class="rodadero">
                     <label for="contacto" class="rodadero2"></label>
-                    <a href="#contacto" class="inicio">Contacto</a>
+                    <a href="contacto.html" class="inicio">Contacto</a>
                 </div>
-                
             </div>
         </aside>
         <div class="principal">
