solo falta agregar los proyectos y arreglas algunas cosas

--- a/proyectos.html
+++ b/proyectos.html
@@ -45,12 +45,18 @@
         </aside>
         <div class="principal">
             <div class="contenidotodo">
-                <div class="trabajo">Trabajo 1
-                    <h6> pruebaa eje</h6>
+                <div class="trabajo">
+                    <img src="img/fondoPantalla.jpg" alt="" >
                 </div>
-                <div class="trabajo">Trabajo 2</div>
-                <div class="trabajo">Trabajo 3</div>
-                <div class="trabajo">Trabajo 4</div>
+                <div class="trabajo">
+                    <img src="img/fondoPantalla.jpg" alt="" >
+                </div>
+                <div class="trabajo">
+                    <img src="img/fondoPantalla.jpg" alt="" >
+                </div>
+                <div class="trabajo">
+                    <img src="img/fondoPantalla.jpg" alt="" >
+                </div>
             </div>
         </div>
         
